[package]
name = "liberty2json"
version = "0.1.0"
authors = ["erihsu <zhenyuxu163@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.0"
serde_json = "1.0"
clap = "2.33"
pretty_env_logger = "0.4"
log = "0.4"

[lib]
name = "liberty2json"
path = "src/lib.rs"
